correcting the gateway

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -39,7 +39,7 @@ http {
 
         # ===== User Service =====
         location /user/ {
-            proxy_pass http://user_service/;
+            proxy_pass http://user_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
 
@@ -54,7 +54,7 @@ http {
 
         # ===== Payment Service =====
         location /payment/ {
-            proxy_pass http://payment_service/;
+            proxy_pass http://payment_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
 
@@ -69,7 +69,7 @@ http {
 
         # ===== Document Service =====
         location /document/ {
-            proxy_pass http://document_service/;
+            proxy_pass http://document_service;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
 
